--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "chess.js": "^0.11.0",
+    "colyseus": "^0.14.6",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
