--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14",
     "nodemon": "^2.0.7",
+    "path": "^0.12.7",
+    "url": "^0.11.0",
     "validator": "^13.5.2"
   },
   "devDependencies": {
